fix project name, remove --enable-preview